# halo2-gpu

./: .clang-format  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: runs-on.yml
.github/workflows/: benchmark.yml  claude-code-review.yml  lint.yml  tests.yml
benchmarks/: Cargo.toml  README.md  run.sh
benchmarks/guest/: Cargo.toml
benchmarks/guest/fibonacci/: Cargo.toml
benchmarks/guest/fibonacci/elf/: fibonacci.elf
benchmarks/src/: lib.rs  main.rs  metric_collection.rs
cache.stale.1783441255/: agg_pk.bitcode  app_pk.bitcode  root_pk.bitcode  root_proof.bitcode
halo2_proofs/: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
halo2_proofs/cuda/include/: ntt_combine.h
halo2_proofs/cuda/include/blst/: blst_t.hpp
halo2_proofs/cuda/include/common/: exception.h  halo2_ffi.h  scratch_span.h
halo2_proofs/cuda/include/field/: alt_bn128.hpp
halo2_proofs/cuda/include/kernel/: commit_product.h  common.h  decode_assigned.h  inverse.h  kate_division.h  ntt_dif.h  ntt_dit.h  omega.h  permutation_commit.h  permutation_quotient.h  pippenger.h  polynomial.h  prefix_scan.h  quotient.h  zeta.h
halo2_proofs/cuda/src/: multiexp.cu  multiopen.cu  ntt.cu  permutation_quotient.cu  quotient.cu  quotient_lookups.cu
halo2_proofs/cuda/src/commitment/: commit_product.cu  grand_product.cu  permutation_commit.cu  permute_expression_pair.cu
halo2_proofs/cuda/src/polynomial/: decode_assigned.cu  kate_division.cu  omega.cu  operations.cu  polynomial.cu
halo2_proofs/src/: arithmetic.rs  circuit.rs  cuda.rs  dev.rs  fft.rs  helpers.rs  lib.rs  multicore.rs  plonk.rs  poly.rs  transcript.rs
halo2_proofs/src/circuit/: floor_planner.rs  layouter.rs  table_layouter.rs  value.rs
halo2_proofs/src/circuit/floor_planner/: single_pass.rs  v1.rs
halo2_proofs/src/circuit/floor_planner/v1/: strategy.rs
halo2_proofs/src/cpu/: arithmetic.rs  evaluator.rs  mod.rs  poly.rs
halo2_proofs/src/cpu/poly/: domain.rs
halo2_proofs/src/cuda/: culib.rs  d_buffer_ext.rs  error.rs  halo_gpu_error.rs  modules.rs  pinned.rs  tests.rs  utils.rs
halo2_proofs/src/cuda/funcs/: batch_invert.rs  column_pool.rs  grand_product.rs  lookup.rs  mod.rs  multiexp.rs  multiopen.rs  ntt.rs  omega.rs  permutation.rs  polynomial_ops.rs
halo2_proofs/src/dev/: metadata.rs  tfp.rs
halo2_proofs/src/dev/failure/: emitter.rs
halo2_proofs/src/fft/: baseline.rs  recursive.rs
halo2_proofs/src/plonk/: assigned.rs  circuit.rs  error.rs  evaluation.rs  keygen.rs  logging.rs  lookup.rs  permutation.rs  prover.rs  verifier.rs  witness.rs
halo2_proofs/src/plonk/circuit/: compress_selectors.rs
halo2_proofs/src/plonk/lookup/: prover.rs  verifier.rs
halo2_proofs/src/plonk/permutation/: keygen.rs  prover.rs  verifier.rs
halo2_proofs/src/plonk/vanishing/: prover.rs  verifier.rs
halo2_proofs/src/poly/: commitment.rs  domain.rs  multiopen.rs  multiopen_test.rs  query.rs
halo2_proofs/src/poly/ipa/: commitment.rs  msm.rs  multiopen.rs  strategy.rs
halo2_proofs/src/poly/ipa/commitment/: prover.rs  verifier.rs
halo2_proofs/src/poly/ipa/multiopen/: prover.rs  verifier.rs
halo2_proofs/src/poly/kzg/: commitment.rs  msm.rs  strategy.rs
halo2_proofs/src/poly/kzg/multiopen/: gwc.rs  shplonk.rs
halo2_proofs/src/poly/kzg/multiopen/gwc/: prover.rs  verifier.rs
halo2_proofs/src/poly/kzg/multiopen/shplonk/: prover.rs  verifier.rs
halo2_proofs/tests/: batch_eval_polynomial_device_out_equivalence.rs  cross_prover_pk_equivalence.rs  distribute_powers_zeta_device_equivalence.rs  divide_by_vanishing_device_equivalence.rs  eval_polynomial_horner_device_equivalence.rs  extended_from_lagrange_vec_device_equivalence.rs  gpu_keygen_byte_identity.rs  lagrange_to_coeff_device_input_equivalence.rs  lookup_product_compressed_pair_residency_equivalence.rs  multiexp_dense_bucket_edge_equivalence.rs  multiexp_device_scalars_device_bases_equivalence.rs  multiexp_s1b_dense_edge_equivalence.rs  phase5_prove_verify_lookup_permutation.rs  pk_device_mirror_equivalence.rs  plonk_api.rs  poly_multiply_add_device_equivalence.rs
scripts/: aggregate_primitive.py  trusted_setup_s3.sh
