[workspace.package]
version = "1.0.0-rc.0"
edition = "2021"
rust-version = "1.91.1"

[workspace]
members = ["halo2_proofs", "benchmarks"]
resolver = "2"


[profile.dev]
opt-level = 3

# Fastest runtime configuration, match reth-benchmark config
[profile.release]
opt-level = 3
lto = "thin"
debug = "line-tables-only"
strip = true
panic = "unwind"
codegen-units = 16

[profile.profiling]
inherits = "release"
debug = 2
strip = false

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[patch."https://github.com/axiom-crypto/halo2-gpu.git"]
halo2-axiom-gpu = { path = "halo2_proofs" }

# Local validation: consume the Milestone-A additive accessors on
# `feat/proving-key-accessors` (the halo2 checkout). The final pin is the
# maintainer's call at merge (mirrors the Polynomial unification flow).
[patch."https://github.com/axiom-crypto/halo2"]
halo2-axiom = { path = "/home/grigorii/dev/halo2/halo2/halo2_proofs" }
