[package]
name = "halo2-axiom-gpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Intrinsic Technologies"]
description = "A Halo2 proving and verifying crate with a CUDA-accelerated KZG prover on BN254."
license = "MIT OR Apache-2.0"
repository = "https://github.com/axiom-crypto/halo2-gpu"
readme = "README.md"
categories = ["cryptography"]
keywords = ["halo", "proofs", "zkp", "zkSNARKs"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
backtrace = { version = "0.3", optional = true }
rayon = "1.8"
colored = "2.0.0"
crossbeam = "0.8"
ff = "0.13"
group = "0.13"
pairing = "0.23"
halo2curves = { package = "halo2curves-axiom", version = "0.7.0", default-features = false, features = [
  "bits",
  "bn256-table",
  "derive_serde",
] }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
tracing = "0.1"
blake2b_simd = "1"
rustc-hash = "1.1"
sha3 = "0.10"
ahash = "0.8"
subtle = "2.3"
cfg-if = "0.1"
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
libc = "0.2"
cuda-driver-sys = "0.3"
openvm-cuda-common = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
log = "0.4.17"
env_logger = "0.7.0"
anyhow = "1.0.45"
ark-std = "0.3.0"
rustacuda = "0.1.3"
once_cell = "1.8.0"
yastl = "0.1.2"
lazy_static = "1.4.0"
git-version = "0.3.5"
itertools = "0.11"
halo2-axiom = { version = "0.5.2", git = "https://github.com/axiom-crypto/halo2", tag = "v0.5.2" }

[build-dependencies]
openvm-cuda-builder = { version = "2.0.0", git = "https://github.com/openvm-org/stark-backend.git", branch = "main", default-features = false }
# Legacy circuit compatibility
halo2_legacy_pdqsort = { version = "0.1.0", optional = true }

[dev-dependencies]
assert_matches = "1.5"
proptest = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
rand_chacha = "0.3.1"
ark-std = { version = "0.3.0", features = ["print-trace"] }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["large", "permute_par", "circuit-params"]
asm = ["halo2curves/asm"]
gadget-traces = ["backtrace"]
sanity-checks = []
batch = ["rand_core/getrandom"]
small = []
large = []
permute_par = []
phase-check = []
profile = ["ark-std/print-trace"]
profile_assign = []
circuit-params = []
# Opt-in: in `extended_from_lagrange_vec_device`, when a gather input part is
# host- (not device-) resident, materialize the remaining parts and run the
# host gather instead of erroring. Default builds return
# `HaloGpuError::InsufficientGpuMemory` for that case.
vram-fallback = []

[lib]
bench = false
